--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
   <title>Boss-Home</title>
 </head>
 <body>
-<h1>Helllo World</h1>
+<p>
+  Hello World,<br>
+     This is my letter to you.<br/>
+     I'll work on adding contents, movie reviews soon.But before all that, me and my buddies have made a game of Hangman as part of our FOSS project.
+     <br>
+     Play the game <a href = "hangman.html">here!!</a>. 
+     I bet you'll enjoy.
+     In the meantime I'll get back to building this website
+     
+     Catch up with you all soon.
+     
+  Cheers,
+  Boss
+</p>
 </body>
 </html>
