--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <html>
 <head>
-  <title>Boss-Home</title>
+  <title>Our Project</title>
 </head>
-<body>
+<body bgcolor= "BLACK">
 <p>
   Hello World,<br>
-     This is my letter to you.<br/>
-     I'll work on adding contents, movie reviews soon.But before all that, me and my buddies have made a game of Hangman as part of our FOSS project.
+     This is our letter to you.<br/>
+    <p></p> We are learningExciting things together <p>
+      <p>amidst busy schedule we forget few awesome things in the past </p>
+    </p>so me and my buddies have made a game of Hangman as part of our FOSS project.
      <br>
      Play the game <a href = "hangman.html">here!!</a>. 
      I bet you'll enjoy.
-     In the meantime I'll get back to building this website
+     In the meantime we'll get back to building this website
      
      Catch up with you all soon.
      
   Cheers,
-  Boss
+  SoundMakers
 </p>
 </body>
 </html>
