--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <head>
   <title>Our Project</title>
 </head>
-<body bgcolor= "BLACK">
+<body >
 <p>
   Hello World,<br>
      This is our letter to you.<br/>
     <p></p> We are learningExciting things together <p>
-      <p>amidst busy schedule we forget few awesome things in the past </p>
+      <p>amidst busy schedule we forget few awesome games we played  in our childhood </p>
     </p>so me and my buddies have made a game of Hangman as part of our FOSS project.
      <br>
      Play the game <a href = "hangman.html">here!!</a>. 
