--- a/hangman.html
+++ b/hangman.html
@@ -9,7 +9,7 @@ function game() {
         /* start config options */
         availableLetters = "abcdefghijklmnopqrstuvwxyz";
         lives = 5;
-        words = ["cat", "dog", "cow", "reindeer","Lion","Dinosaur","elephant","tiger","orangutan","buffallo","pig"];
+        words = ["cat", "dog", "cow", "reindeer","Lion","Dinosaur","elephant","tiger","orangutan","buffallo","pig","snake"];
         messages = {
             win: 'You win!',
             lose: 'Game over!',
